Build for Fabric, NeoForge and Forge from 1.20.1 to 26.3
Stonecutter build based on Multicutter. 1.20.1 uses NeoForged Forge instead of NeoForge.